Issue #2285283 by Sutharsan | DD 85: L10n_update.admin.css image 'menu-collapsed.png' and 'menu-expanded.png'.

--- a/css/l10n_update.admin.css
+++ b/css/l10n_update.admin.css
@@ -16,12 +16,12 @@
   vertical-align: top;
 }
 #l10n-update-status-form .expand .inner {
-  background: transparent url(/misc/menu-collapsed.png) left .6em no-repeat;
+  background: transparent url(../images/menu-collapsed.png) left .6em no-repeat;
   margin-left: -12px;
   padding-left: 12px;
 }
 #l10n-update-status-form .expanded .expand .inner {
-  background: transparent url(/misc/menu-expanded.png) left .6em no-repeat;
+  background: transparent url(../images/menu-expanded.png) left .6em no-repeat;
 }
 
 #l10n-update-status-form .label {
